# edgefinder

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/clubelo/: 2015-08-01.csv  2016-08-01.csv  2017-08-01.csv  2018-08-01.csv  2019-08-01.csv  2020-08-01.csv  2021-08-01.csv  2022-08-01.csv  2023-08-01.csv  2024-08-01.csv  2025-08-01.csv  2026-08-01.csv
data/reports/: analysis_today.parquet  backtest_summary.json  bets_all.parquet  h1_halflife_grid.json  h2_props_comparison.json  h3_devig_comparison.json  h5_pinnacle_reliability.json  matches_streaks.parquet  player_stats_streaks.parquet  predictions_BRA-Serie_A.parquet  predictions_ENG-Championship.parquet  predictions_ENG-Premier_League.parquet  predictions_ESP-La_Liga.parquet  predictions_FRA-Ligue_1.parquet  predictions_GER-Bundesliga.parquet  predictions_ITA-Serie_A.parquet  predictions_NED-Eredivisie.parquet  predictions_POR-Liga_Portugal.parquet  team_stats_streaks.parquet
docs/: research-log.md
scripts/: _wc_load.py  exp_h1_halflife.py  exp_h2_props.py  exp_h3_devig.py  exp_h5_pinnacle.py  load_db.py  publish.cmd  run_backtest.py  update.cmd  warm_fast.py  warm_fbref.py  warm_understat.py
src/edgefinder/: cli.py  config.py  timeutil.py
src/edgefinder/backtest/: data.py  metrics.py  monte_carlo.py  runner.py  walkforward.py
src/edgefinder/dashboard/: app.py
src/edgefinder/data/: teamnames.py
src/edgefinder/edge/: analysis.py  correlation.py  ev.py  kelly.py  streaks.py  today.py  tracking.py
src/edgefinder/features/: decay.py  minutes.py  opponent.py  rest.py  stability.py
src/edgefinder/ingest/: _sd.py  eloratings.py  etl.py  fbref.py  matchhistory.py  odds_api.py  understat.py
src/edgefinder/market/: clv.py  consensus.py  devig.py
src/edgefinder/models/: bivariate_poisson.py  calibration.py  dixon_coles.py  ensemble.py  player_props.py
src/edgefinder/portfolio/: bankroll.py  risk.py
src/edgefinder/storage/: repository.py  schema.py
tests/: test_analysis_logic.py  test_backtest_metrics.py  test_bivariate_poisson.py  test_calibration.py  test_decay.py  test_devig.py  test_dixon_coles.py  test_edge.py  test_ensemble.py  test_market.py  test_matchhistory.py  test_minutes.py  test_monte_carlo.py  test_opponent.py  test_player_props.py  test_portfolio.py  test_rest.py  test_stability.py  test_streaks.py  test_teamnames.py  test_tracking.py  test_walkforward.py
