[project]
name = "edgefinder"
version = "0.1.0"
description = "Motor de analise quantitativa para futebol: probabilidades calibradas vs. odds de mercado"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "soccerdata>=1.9.0",
    "streamlit>=1.36",
    "plotly>=5.22",
]

[project.optional-dependencies]
# Camada bayesiana por MCMC completo. Opcional porque o PyTensor no Windows
# sem toolchain C cai para um backend lento; o nucleo usa pooling parcial
# conjugado (Gamma-Poisson), que e exato e nao depende disso.
bayes = ["pymc>=5.16"]

[project.scripts]
edgefinder = "edgefinder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgefinder"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "RUF",
]
ignore = [
    "E501",  # linhas longas: o format cuida; docstrings com formulas podem passar
]

[tool.ruff.lint.per-file-ignores]
# O bootstrap de sys.path para o Streamlit Cloud precisa preceder os imports.
"src/edgefinder/dashboard/app.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["edgefinder"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["soccerdata.*", "statsmodels.*", "sklearn.*", "scipy.*", "plotly.*", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# O dashboard e a CLI orquestram libs sem stubs; o rigor fica no nucleo estatistico.
module = ["edgefinder.dashboard.*"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/edgefinder"]
# O gate de 80% vale para o NUCLEO ESTATISTICO (features/models/market/edge/
# backtest — hoje em 91-100%). As camadas de integracao (ETL, coletores,
# runner, dashboard) tocam rede/banco e sao validadas de ponta a ponta pelos
# runs reais (smoke + backtest), nao por unit tests — mock de scraping daria
# falsa confianca.
omit = [
    "src/edgefinder/dashboard/*",
    "src/edgefinder/cli.py",
    "src/edgefinder/ingest/_sd.py",
    "src/edgefinder/ingest/etl.py",
    "src/edgefinder/ingest/fbref.py",
    "src/edgefinder/ingest/understat.py",
    "src/edgefinder/ingest/odds_api.py",
    "src/edgefinder/ingest/eloratings.py",
    "src/edgefinder/storage/*",
    "src/edgefinder/backtest/data.py",
    "src/edgefinder/backtest/runner.py",
    "src/edgefinder/edge/today.py",
    "src/edgefinder/edge/tracking.py",
]
